--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">&lt;OLA/&gt;</a>.
+      >. Coded by <a href="https://github.com/olahasan" target="_blank">&lt;OLA/&gt;</a>..
     </div>
   </body>
 </html>
